--- a/seychess/chess-style.css
+++ b/seychess/chess-style.css
@@ -118,7 +118,7 @@ body {
 @media (max-width: 768px) {
     .hero-section {
         min-height: 100vh;
-        width: calc(100% + 4rem); /* Specific adjustment for iPhone 15 */
+        width: calc(100%); /* Specific adjustment for iPhone 15 */
         margin: 0 auto;
         padding: 0;
     }
