--- a/seychess/chess-style.css
+++ b/seychess/chess-style.css
@@ -133,7 +133,7 @@ body {
         padding: 0.5rem;
     }
     .rankings-table {
-        width: calc(100%+1);
+        width: calc(100% + 1rem);
     }
     .rankings-table th, .rankings-table td {
         padding: 0.5rem;
@@ -146,7 +146,7 @@ body {
 @media (max-width: 393px) {
     .hero-section {
         min-height: 100vh;
-        width: calc(100% + 7rem); /* Specific adjustment for Redmi Note 9 */
+        width: calc(100% + 9rem); /* Specific adjustment for Redmi Note 9 */
         margin: 0 auto;
         padding: 0;
     }
@@ -161,7 +161,7 @@ body {
         padding: 0.5rem;
     }
     .rankings-table {
-        width: calc(100% - 1rem);
+        width: calc(100% + 1rem);
     }
     .rankings-table th, .rankings-table td {
         padding: 0.4rem;
